<resources>
    <string name="app_name">MyUCCApp</string>
    <string name="ucc_faculty_directory">UCC Faculty Directory</string>
    <string name="ucc_timetable_calendar"><![CDATA[UCC Timetable & Calendar]]></string>
    <string name="admission_application"><![CDATA[Admission & Application]]></string>
    <string name="ucc_courses_programmes"><![CDATA[UCC Courses & Programmes]]></string>
    <string name="ucc_social_media">UCC Social Media</string>
    <string name="contact_ucc_email_fab">CONTACT UCC - EMAIL FAB</string>
    <string name="logo">logo</string>
    <string name="welcome_to_the_myuccapp">Welcome to the MyUCCApp!</string>
    <string name="home">home</string>
    <string name="welcome_to_the_myuccapp_main_menu">Welcome to the MyUCCApp | Main Menu</string>
    <string name="layout1" />
    <string name="layout11" />
    <string name="main_menu">Main Menu</string>
    <string name="visit_ucc_s_facebook_page">Visit UCC\'s Facebook Page</string>
    <string name="visit_ucc_s_twitter_page">Visit UCC\'s Twitter Page</string>
    <string name="visit_ucc_s_instagram_page">Visit UCC\'s Instagram Page</string>
    <string name="visit_the_ucc_s_website">Visit the UCC\'s Website</string>
    <string name="visit_the_ucc_s_social_media">Visit the UCC\'s Social Media</string>
    <string name="arrow">arrow</string>
    <string name="apply_here">APPLY HERE!</string>
    <string name="info_tech_department">Info Tech Department</string>
    <string name="secondary_high_school_diploma_ged_or_certificate_of_equivalency_proficiency_or_passes_in_5_gce_o_level_csec_passes_at_a_b_or_c_i_ii_or_iii_including_mathematics_and_english_or_international_baccalaureate_ib_or_equivalent_subject_to_ucc_global_s_approval_students_who_have_successfully_completed_undergraduate_program_credits_may_be_eligible_to_transfer_up_to_60_of_those_credits_to_the_ucc_global_program_final_determination_on_the_eligibility_of_the_transfer_of_credits_will_be_made_once_your_application_and_transcript_s_are_received_reviewed_and_approved_by_ucc_global">Secondary (High) School diploma, GED, or Certificate of Equivalency / Proficiency or Passes in 5 GCE O Level / CSEC passes at A, B or C / I,II or III (including Mathematics and English) or International Baccalaureate (IB) or equivalent (subject to UCC Global’s approval). Students who have successfully completed undergraduate program credits may be eligible to transfer up to 60 of those credits to the UCC Global program. Final determination on the eligibility of the transfer of credits will be made once your application and transcript(s) are received, reviewed, and approved by UCC Global.</string>
    <string name="entry_requirements">Entry Requirements:</string>
    <string name="the_language_of_instruction_at_ucc_global_is_english_applicants_whose_most_recent_education_was_not_in_english_will_be_required_to_demonstrate_english_language_proficiency_through_the_completion_of_an_approved_english_testing_regime_such_as_the_test_of_english_as_a_foreign_language_toefl_both_toefl_paper_based_pbt_and_toefl_internet_based_ibt_will_be_accepted">The language of instruction at UCC Global is English. Applicants whose most recent education was not in English will be required to demonstrate English language proficiency, through the completion of an approved English testing regime such as the Test of English as a Foreign Language (TOEFL). Both TOEFL paper-based (PBT) and TOEFL Internet-based (IBT) will be accepted.</string>
    <string name="english_language_requirements">English Language Requirements</string>
    <string name="info">Info</string>
    <string name="misc">misc</string>
    <string name="admission_requirements">Admission Requirements</string>
    <string name="bachelor_s_degree_in_information_technology">Bachelor\'s Degree in Information Technology</string>
    <string name="learn_more">Learn More</string>
    <string name="bsc_in_information_technology">Bsc in Information Technology</string>
    <string name="schedule_of_classes">Schedule of Classes</string>
    <string name="september_to_december_2022">September to December 2022</string>
    <string name="undergraduate_cycle_4">Undergraduate Cycle 4</string>
    <string name="period_august_15_to_september_17_2022">Period: August 15 to September 17, 2022</string>
    <string name="course_introduction_to_sociology">Course: Introduction to Sociology</string>
    <string name="about_this_introductory_course_seeks_to_provide_an_overview_of_sociology_as_a_discipline_it_lays_the_foundation_for_you_to_apply_the_various_theoretical_perspectives_to_contemporary_social_problems_especially_relating_to_the_world_of_work">About: This introductory course seeks to provide an overview of sociology as a discipline. It lays the foundation for you to apply the various theoretical perspectives to contemporary social problems, especially relating to the world of work.</string>
    <string name="period_september_26_to_october_29_2022">Period: September 26 to October 29, 2022</string>
    <string name="course_mobile_application_development">Course: Mobile Application Development</string>
    <string name="about_this_course_will_introduce_you_to_the_core_conceptual_skills_and_basic_practices_needed_to_develop_an_android_application_the_course_will_focus_on_how_the_application_communicates_to_retrieve_store_and_interact_with_other_devices_on_any_android_platform_topics_will_include_memory_management_user_interface_design_user_interface_building_input_methods_data_handling_and_network_techniques">About: This course will introduce you to the core conceptual skills and basic practices needed to develop an Android application. The course will focus on how the application communicates to retrieve, store and interact with other devices on any android platform. Topics will include memory management, user interface design, user interface building, input methods, data handling, and network techniques.</string>
    <string name="about_this_introductory_course_in_psychology_is_designed_to_give_you_a_basic_understanding_of_human_behaviour_you_will_learn_the_major_psychological_theories_that_will_allow_you_to_explain_and_predict_human_behaviour_the_emphasis_will_be_on_examining_your_behaviour_and_the_behaviour_of_others_within_an_organisational_context">About: This introductory course in psychology is designed to give you a basic understanding of human behaviour. You will learn the major psychological theories that will allow you to explain and predict human behaviour. The emphasis will be on examining your behaviour and the behaviour of others within an organisational context.</string>
    <string name="undergraduate_cycle_5">Undergraduate Cycle 5</string>
    <string name="course_introduction_to_psychology">Course: Introduction to Psychology</string>
    <string name="period_november_6_to_december_10_2022">Period: November 6 to December 10, 2022</string>
    <string name="undergraduate_cycle_6">Undergraduate Cycle 6</string>
    <string name="contact_it_head_of_department">Contact IT Head of Department</string>
    <string name="email_hod">Email HOD</string>
    <string name="contact_876_906_3000_ext_4046">Contact: (876) 906-3000 ext: 4046</string>
    <string name="name_ms_natalie_rose">Name: (Ms.) Natalie Rose</string>
    <string name="nataliepic">nataliepic</string>
    <string name="ucc_faculty_staff"><![CDATA[UCC Faculty & Staff]]></string>
    <string name="contact_information">Contact Information</string>
    <string name="em1" />
    <string name="hod_graduate_studies_research"><![CDATA[HOD: Graduate Studies & Research]]></string>
    <string name="dr_tom_amonde">Dr. Tom Amonde</string>
    <string name="hod_business_administration">HOD: Business Administration</string>
    <string name="businessadminhod_ucc_edu_jm">businessadminhod@ucc.edu.jm</string>
    <string name="_876_906_3000_ext_4044">(876) 906-3000 ext: 4044</string>
    <string name="soniapic">soniapic</string>
    <string name="embtn1">TODO</string>
    <string name="tompic">tompic</string>
    <string name="callbtn1">calltbn1</string>
    <string name="callbtn2">callbtn2</string>
    <string name="_876_906_3000_ext_4091">(876) 906-3000 ext: 4091</string>
    <string name="mrs_sonia_davidson">Mrs. Sonia Davidson</string>
    <string name="graduatestudiesdirector_ucc_edu_jm">graduatestudiesdirector@ucc.edu.jm</string>
    <string name="misc2">misc2</string>
    <string name="mrs_ionie_miller">Mrs. Ionie Miller</string>
    <string name="ms_natalie_rose">Ms. Natalie Rose</string>
    <string name="hod_general_amp_behavioural_science"><![CDATA[HOD: General & Behavioural Science]]></string>
    <string name="soniaemail">businessadminhod@ucc.edu.jm</string>
    <string name="dr_peter_ndajah">Dr. Peter Ndajah</string>
    <string name="_876_906_3000">(876) 906-3000</string>
    <string name="graduateEmail">graduatestudiesdirector@ucc.edu.jm</string>
    <string name="misc4">misc4</string>
    <string name="hod_information_technology">HOD: Information Technology</string>
    <string name="_876_906_3000_ext_4019">(876) 906-3000 ext: 4019</string>
    <string name="_876_906_3000_ext_4046">(876) 906-3000 ext: 4046</string>
    <string name="appliedpsychologyfaculty_ucc_edu_jm">appliedpsychologyfaculty@ucc.edu.jm</string>
    <string name="ithod_ucc_edu_jm">ithod@ucc.edu.jm</string>
    <string name="misc5">misc5</string>
    <string name="misc6">misc6</string>
    <string name="dr_collette_smith">Dr. Collette Smith</string>
    <string name="hod_mathematics">HOD: Mathematics</string>
    <string name="hod_tourism_amp_hospitality"><![CDATA[HOD: Tourism & Hospitality]]></string>
    <string name="_876_906_3000_ext_4117">(876) 906-3000 ext: 4117</string>
    <string name="headofschoolsmathit_ucc_edu_jm">headofschoolsmathit@ucc.edu.jm</string>
    <string name="hodtourism_ucc_edu_jm">hodtourism@ucc.edu.jm</string>
    <string name="august_to_december_2022">August to December 2022</string>
    <string name="ucc_courses">UCC Courses</string>
    <string name="department_information_technology">Department: Information Technology</string>
    <string name="course_id">Course ID:</string>
    <string name="itt420">ITT420</string>
    <string name="course_name">Course Name:</string>
    <string name="mobile_app_development">Mobile App Development</string>
    <string name="course_credits">Course Credits:</string>
    <string name="_6_credits">6 Credits</string>
    <string name="course_pre_requisites">Course Pre-requisites:</string>
    <string name="prior_programming_knowledge">Prior Programming Knowledge</string>
    <string name="course_description">Course Description:</string>
    <string name="this_courses_covers_the_development_of_various_applications_on_android_studio">This courses covers the development of various applications on Android Studio</string>
    <string name="click_on_the_buttons_below">Click on the buttons below!</string>
    <string name="english_language_requirements_the_language_of_instruction_at_ucc_global_is_english_applicants_whose_most_recent_education_was_not_in_english_will_be_required_to_demonstrate_english_language_proficiency_through_the_completion_of_an_approved_english_testing_regime_such_as_the_test_of_english_as_a_foreign_language_toefl_both_toefl_paper_based_pbt_and_toefl_internet_based_ibt_will_be_accepted">English Language Requirements: The language of instruction at UCC Global is English. Applicants whose most recent education was not in English will be required to demonstrate English language proficiency, through the completion of an approved English testing regime such as the Test of English as a Foreign Language (TOEFL). Both TOEFL paper-based (PBT) and TOEFL Internet-based (IBT) will be accepted.</string>
</resources>