<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="6dp"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/spartan_medium"
                android:text="@string/course_id"
                android:textColor="@color/brownbrown"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/courseID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/spartan_medium"
                android:text="@string/itt420"
                android:textColor="@color/brownbrown"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/spartan_medium"
                android:text="@string/course_name"
                android:textColor="@color/brownbrown"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/courseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/spartan_medium"
                android:text="@string/mobile_app_development"
                android:textColor="@color/goldenbrown"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/spartan_medium"
                android:text="@string/course_credits"
                android:textColor="@color/brownbrown"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/courseCredits"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/_6_credits"
                android:textColor="@color/brownbrown"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:fontFamily="@font/spartan_medium"
                android:text="@string/course_pre_requisites"
                android:textColor="@color/brownbrown"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coursePrerequisites"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/spartan_medium"
                android:lineSpacingExtra="4sp"
                android:text="@string/prior_programming_knowledge"
                android:textColor="@color/brownbrown"
                android:textSize="12sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spartan_medium"
                android:text="@string/course_description"
                android:textColor="@color/brownbrown"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/courseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/spartan_medium"
            android:lineSpacingExtra="4sp"
            android:text="@string/this_courses_covers_the_development_of_various_applications_on_android_studio"
            android:textColor="@color/brownbrown"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>